minor bugs fixed

--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@ Special Cleanse Kit
         </div>
 
         <form>
-            <fieldset>
+            <div class="field">
                 <legend>
 Join Our Mailing List
                 </legend>
@@ -197,7 +197,7 @@ Join Our Mailing List
                 <input class="mail-input" type="email" name="email" id="email">
                 <button class="sub-btn" type="submit">SUBMIT</button>
                 </div>
-            </fieldset>
+            </div>
         </form>
 
         <a href="#">
